...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Gvb-fd-6Xx">
                                <rect key="frame" x="20" y="76" width="374" height="478"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lhu-zm-Mzz">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="mealName"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                    </textField>
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="IRl-RW-0Ya">
                                        <rect key="frame" x="0.0" y="47" width="374" height="374"/>
                                        <accessibility key="accessibilityConfiguration" identifier="mealPhoto"/>
                                        <gestureRecognizers/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="IRl-RW-0Ya" secondAttribute="height" multiplier="1:1" id="F8m-0s-wXm"/>
                                        </constraints>
                                        <connections>
                                            <outletCollection property="gestureRecognizers" destination="Qpu-9D-2e4" appends="YES" id="a5I-Zi-jye"/>
...
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="uNc-Dq-2dt" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
                                        <rect key="frame" x="61" y="434" width="252" height="44"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="starCount">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="mealRating"/>
                                        </userDefinedRuntimeAttributes>
                                    </stackView>
                                </subviews>
                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="IRl-RW-0Ya" secondAttribute="trailing" id="RIr-eK-Doj"/>
...
                            <connections>
                                <action selector="cancel:" destination="BYZ-38-t0r" id="WOc-Mn-69B"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="5wv-8o-AB9">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="mealSave"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="yw5-oi-GPw" kind="unwind" unwindAction="unwindToMealListWithSender:" id="dDw-te-63q"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
